[workspace]

members = [
    "adder",
    "add-one",
]

# Eger ki belli bir package calistirmak istersek o zaman cargo run -p <package-name> seklinde calistirabiliriz.
# External dependency ler icin tek Cargo.lock file oldugu icin aynisi iki alt package a da yuklenmeli.
# Eger workspace te package publishlemek istersek bunu her package icin ayri ayri yapmamiz lazim.
# Yani cd ile o package a gidip islemlerimizi orada yapmamiz lazim.