[package]
name = "adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cargo ayni workspace deki crate lerin birbirine dependent oldugunu varsaymadigi icin bu baglantiyi bizim kurmamiz gerekiyor
add-one = { path = "../add-one" }
rand = "0.8.3"